# Bioinformatics

./: CMakeLists.txt  InfluenzaAvirus.fasta  InfluezaAvirus.gb  LICENSE  README.md  SW.cu  SW.h  TODO.txt  add.cu  add_cuda  example.fa  exec  install.sh  main.cpp  main.h  main.h.in  program  protein.txt  synthData1_str2.txt  synthData2_str1.txt  synthData3_str2.txt  synthData4_str2.txt  synthetic_data.py  utility.cpp  utility.h
data_examples/: escher1.txt  escher2.txt  escherichia0_str1.txt  escherichia0_str2.txt  escherichia1_str1.txt  escherichia1_str2.txt  escherichia2_str1.txt  escherichia2_str2.txt  escherichia3_str1.txt  escherichia3_str2.txt  middle_str1.txt  middle_str2.txt  python_FASTA_maker.py  short_str1.txt  short_str2.txt  synthData1_str1.txt  synthData2_str2.txt  synthData3_str1.txt  synthData4_str1.txt
